Fix disabled button contrast
Fixes #38

--- a/app/javascript/styles/kkt/diff.scss
+++ b/app/javascript/styles/kkt/diff.scss
@@ -607,6 +607,11 @@ body.about-body {
       color: $white;
     }
   }
+
+  &.disabled {
+    color: inherit;
+    opacity: 0.6;
+  }
 }
 
 .media-gallery__gifv__label {
